Payment request shipping address editor now properly handles countries

The autofill profile needs the country to be set before other fields so that they can be properly internaionalized.

And the country must be set using its internationalized name (as opposed to country code) when using the SetInfo method.

BUG=722039,722452

Review-Url: https://codereview.chromium.org/2883333003
Cr-Commit-Position: refs/heads/master@{#472708}

Former-commit-id: 09f15955329247e16c8547119e326ac8f35a269c